--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
                 <h2>EVOLUA E ENCARE NOSSOS FREELANCERS</h2>
                 <img src="./assets/images/professional-challenges.png" alt="Homem lendo depoimentos em um tablet">
                 <p>
-                    Junte-se ao nosso ecossistema e transforme o mundo com a gente!nossa plataforma busca sempre talentos mais criativos, dinâmicos e colaborativos, além do conhecimento técnico. A nossa missão é proporcionar a você as melhores oportunidades.
+        Junte-se ao nosso ecossistema e transforme o mundo com a gente!<br>nossa plataforma busca sempre talentos mais criativos, dinâmicos e colaborativos, além do conhecimento técnico. A nossa missão é proporcionar a você as melhores oportunidades.
                 </p>
             </div>
         </section>
     </main>
     <footer>
         <img src="./assets/images/dio-logo.png" alt="Logotipo Faztudo">
-        <p>Acesse <a href="https://dio.me">faztudo.com</a> e começe agora</p>
+        <p>Acesse <a href="">faztudo.com</a> e começe agora</p>
     </footer>
 </body>
 </html>
