--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="banner container">
         <div class="banner-content">
             <div class="logo">
-                <img src="./assets/images/logo.png" alt="logotipo formação css dio">
+                <img src="./assets/images/logo.png" alt="logotipo faz tudo">
             </div>
             <h1>FREELANCER </h1>
             <p>
@@ -43,7 +43,7 @@
         <section class="container">
             <div class="section-container"><br>
                 <h2>EVOLUA E ENCARE NOSSOS FREELANCERS</h2>
-                <img src="./assets/images/professional-challenges.png" alt="Homem lendo depoimentos em um tablet">
+                <img src="./assets/images/professional-challenges.png" alt="Homem com uma placa">
                 <p>
         Junte-se ao nosso ecossistema e transforme o mundo com a gente!<br>nossa plataforma busca sempre talentos mais criativos, dinâmicos e colaborativos, além do conhecimento técnico. A nossa missão é proporcionar a você as melhores oportunidades.
                 </p>
@@ -51,8 +51,8 @@
         </section>
     </main>
     <footer>
-        <img src="./assets/images/dio-logo.png" alt="Logotipo Faztudo">
-        <p>Acesse <a href="">faztudo.com</a> e começe agora</p>
+        <img src="./assets/images/nome.png" alt="nome do site faz tudo">
+        <p>Acesse <a href="https://github.com/hellordtas">faztudo.com</a> e começe agora</p>
     </footer>
 </body>
 </html>
